[package]
name = "all-is-cubes"
version = "0.9.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Recursive voxel game engine. Can be used for voxel raytracing."
license = "MIT OR Apache-2.0"
# TODO: revisit categories once it's more settled how useful this is as a game engine
categories = ["games", "graphics", "rendering::engine"]
keywords = ["all-is-cubes", "voxel"]

[package.metadata.docs.rs]
features = ["arbitrary", "save", "std"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[[bench]]
name = "block"
harness = false

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "light"
harness = false

[[bench]]
name = "raycast"
harness = false

[[bench]]
name = "save"
harness = false
required-features = ["save"]

[[bench]]
name = "space"
harness = false

[[example]]
name = "visualize-raycast"
required-features = ["rerun"]

# See src/lib.rs documentation for more details on features.
[features]
default = ["std"]
# Adds std-dependent functionality such as thread safety.
std = [
    "all-is-cubes-base/std",
    "arcstr/std", # not required but nicer behavior
    "nosy/sync",
    "yield-progress/sync",
]
# Adds `impl arbitrary::Arbitrary for ...`
arbitrary = [
    "dep:arbitrary",
    "all-is-cubes-base/arbitrary",
    "euclid/arbitrary",
    "ordered-float/arbitrary",
]
# Adds serde implementations.
save = [
    "std", # TODO: Eliminate dependency on std (requires replacing flate2)
    "dep:base64", # encoded compressed data
    "dep:flate2", # compression
    "dep:serde",
    "all-is-cubes-base/serde",
    "bitflags/serde", # serialize for util::ShowStatus
    "bytemuck/extern_crate_std", # impl Error for CheckedCastError
    "ordered-float/serde",
]
# Adds rerun logging support
rerun = [
    "std",
    "dep:re_log_types",
    "dep:re_sdk",
    "dep:re_types",
    "all-is-cubes-base/rerun",
]
# Adds automatic parallelism to some algorithms.
# If disabled, `std::thread` is never used.
# If enabled, threads may be created and the active `rayon` thread pool may be used.
auto-threads = ["std", "dep:rayon"]

[dependencies]
all-is-cubes-base = { workspace = true }
arbitrary = { workspace = true, optional = true }
arcstr = { version = "1.2.0", default-features = false, features = ["serde", "substr"] }
arrayvec = { workspace = true }
base64 = { workspace = true, optional = true, features = ["std"] } # used in serialization
bitflags = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
cfg-if = { workspace = true }
displaydoc = { workspace = true }
downcast-rs = { workspace = true, default-features = false }
# mint feature to guarantee that our callers can use mint types
# libm feature to guarantee compilability and compatibility with no_std
euclid = { workspace = true, default-features = false, features = ["libm", "mint"] }
embedded-graphics = { workspace = true }
exhaust = { workspace = true, default-features = false }
flate2 = { version = "1.0.26", optional = true }
futures-core = { workspace = true }
hashbrown = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
macro_rules_attribute = { workspace = true }
manyfmt = { workspace = true }
mutants = { workspace = true }
nosy = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
paste = { workspace = true }
png-decoder = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true, optional = true }
# re_sdk is a data-logging and visualization tool; we are currently using it _only_ for
# development of All is Cubes itself.
re_log_types = { workspace = true, optional = true }
re_sdk = { workspace = true, optional = true }
re_types = { workspace = true, optional = true }
# rc feature needed because we are [de]serializing `Arc`s
# alloc feature needed for #[serde(flatten)] — https://github.com/serde-rs/serde/issues/1935
serde = { workspace = true, optional = true, features = ["alloc", "derive", "rc"] }
unicode-segmentation = { workspace = true }
yield-progress = { workspace = true }

[build-dependencies]
all-is-cubes-base = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
euclid = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
allocation-counter = { workspace = true }
criterion = { workspace = true }
futures-util = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
# Using tokio for async test-running.
tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[lints]
workspace = true
