[workspace]
# Excludes this from containing workspace; see top-level Cargo.toml for explanation

[package]
name = "all-is-cubes-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.57"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.0.1", features = ["derive"] }
futures-executor = { version = "0.3.17", default-features = false, features = ["std"] }
libfuzzer-sys = "0.4"

[dependencies.all-is-cubes]
path = "../all-is-cubes/"
features = ["arbitrary"]

[[bin]]
name = "fuzz_block_eval"
path = "fuzz_targets/fuzz_block_eval.rs"
test = false
doc = false

[[bin]]
name = "fuzz_physics"
path = "fuzz_targets/fuzz_physics.rs"
test = false
doc = false

[[bin]]
name = "fuzz_raycast"
path = "fuzz_targets/fuzz_raycast.rs"
test = false
doc = false

[[bin]]
name = "fuzz_triangulator"
path = "fuzz_targets/fuzz_triangulator.rs"
test = false
doc = false

[[bin]]
name = "fuzz_universe"
path = "fuzz_targets/fuzz_universe.rs"
test = false
doc = false
