[workspace]
# Excludes this from containing workspace; see top-level Cargo.toml for explanation

[package]
name = "all-is-cubes-fuzz"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
# Note: Cannot use workspace dependencies here!
all-is-cubes = { path = "../all-is-cubes", features = ["arbitrary"] }
all-is-cubes-gpu = { path = "../all-is-cubes-gpu" }
all-is-cubes-mesh = { path = "../all-is-cubes-mesh", features = ["arbitrary"] }
arbitrary = { version = "1.4.1", features = ["derive"] }
libfuzzer-sys = "0.4"

[patch.crates-io]
# Here are some patches we might want to apply for development:
#
# exhaust = { git = "https://github.com/kpreid/exhaust/", branch = "main" }

[[bin]]
name = "fuzz_block_eval"
path = "fuzz_targets/fuzz_block_eval.rs"
test = false
doc = false

[[bin]]
name = "fuzz_octree"
path = "fuzz_targets/fuzz_octree.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mesh"
path = "fuzz_targets/fuzz_mesh.rs"
test = false
doc = false

[[bin]]
name = "fuzz_physics"
path = "fuzz_targets/fuzz_physics.rs"
test = false
doc = false

[[bin]]
name = "fuzz_raycast"
path = "fuzz_targets/fuzz_raycast.rs"
test = false
doc = false


[[bin]]
name = "fuzz_universe"
path = "fuzz_targets/fuzz_universe.rs"
test = false
doc = false
