[package]
name = "test-renderers"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rendering tests for all-is-cubes."
publish = false

[[bin]]
name = "bless-render"
test = false
doctest = false
bench = false

# Tests use a custom test harness; among other reasons, we want to explicitly skip the
# tests if there is no GPU on the system rather than just making them “pass” falsely.

[[test]]
# Note: This test has its dependencies disabled and thus doesn’t compile.
# It has its dependencies disabled because, for now, it isn’t suffciently complete that we care to
# pay the cost of adding Bevy to our dependencies. In particular, it needs:
# * rendering of non-uniform skies
# * glTF export of light emission
#
# Dependencies we would have if this were runnable:
# bevy = { version = "0.18.1", optional = true, default-features = false, features = [
#     "bevy_animation",
#     "bevy_core_pipeline",
#     "bevy_gltf",
#     "bevy_light",
#     "bevy_pbr",
#     "bevy_post_process",
#     "bevy_render",
#     "bevy_scene",
#     "bevy_window",
#     "debug",
#     "dynamic_linking",
#     "multi_threaded",
#     "png",
#     "reflect_auto_register",
# ]}
# bevy_gltf = { version = "0.18.1", features = ["bevy_animation"] }
# half = { workspace = true, optional = true }
# manyfmt = { workspace = true, optional = true }
name = "gltf-render"
doctest = false
harness = false
test = false # Exclude from normal test runs because it does not pass yet!
required-features = ["gltf"]


[[test]]
name = "ray-render"
doctest = false
harness = false

[[test]]
name = "wgpu-render"
doctest = false
harness = false

[[test]]
name = "ui"
doctest = false
harness = false

[features]
default = ["auto-threads"]
# Enables "auto-threads" feature of all-is-cubes libraries.
# This is a feature so that, if we want to, we can disable it and test the non-threaded build.
auto-threads = ["test-renderers-dylib/auto-threads"]
# Enables `gltf-render` test target. Doesn’t work — see comments above on the [[test]].
gltf = ["test-renderers-dylib/gltf"]

[dependencies]
# Caution: In order for the dynamic linking to succeed, there must be no dependencies from here
# upon all-is-cubes-* or other libraries that the harness depends on and which are not
# `crate-type = ["dylib"]` themselves.
test-renderers-dylib = { path = "dylib" }

# Used by the `bless-render` tool to compress images that are to be stored in the repository.
oxipng = { version = "10.0.0", default-features = false, features = ["parallel", "zopfli"] }

[lints]
workspace = true
