[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
# Rename main file so that the workspace only has one main.rs
path = "src/xtask.rs"
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[dependencies]
clap = { version = "3.0.8", default-features = false, features = ["derive", "std", "suggestions"] }
toml_edit = { version = "0.13.3" }
xaction = "0.2.4"
