[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
publish = false

[[bin]]
name = "xtask"
# Rename main file so that the workspace only has one main.rs
path = "src/xtask.rs"
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[dependencies]
anyhow = "1.0"
# This version of cargo_metadata is old, but it is also the same version used by
# wasm-pack, so using it (as long as it still works) saves on build time and space.
cargo_metadata = "0.15.1"
clap = { version = "4.0.12", default-features = false, features = ["deprecated", "derive", "std", "suggestions"] }
once_cell = "1.4.1"
toml_edit = { version = "0.15.0" }
xshell = "0.1.17"
