[package]
name = "xtask"
edition = "2021"
rust-version = "1.75"
publish = false

[[bin]]
name = "xtask"
# Rename main file so that the workspace only has one main.rs
path = "src/xtask.rs"
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[dependencies]
anyhow = { workspace = true }
# This version of cargo_metadata is old, but it is also the same version used by
# wasm-pack, so using it (as long as it still works) saves on build time and space.
cargo_metadata = "0.8.2"
clap = { workspace = true }
once_cell = { workspace = true }
toml_edit = { version = "0.22.0" }
walkdir = "2.3.2"
xshell = "0.1.17"

[lints]
workspace = true
