[package]
name = "xtask"
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "xtask"
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[dependencies]
anyhow = { workspace = true }
cargo_metadata = "0.23.0"
clap = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
toml_edit = { version = "0.22.13" }
walkdir = "2.3.2"
xshell = "0.2.7"

[lints]
workspace = true
